public/style.css
/* ... */
.form-group input{
  padding:6px;
  
}

.login-box button{
  width:100%;
}

.login-signup-title{
  font-size: 0.9rem;
  color: var(--muted-text-color);
  font-family: sans-serif;
  margin-top:24px;
  margin-bottom:8px;
}

hr{
  width:100%;
}

.form-spacer{
  margin-top:16px;
  display:flex;
  width:100%;
  gap:2px;
  color: var(--muted-text-color);
}

.form-spacer hr{
  border-width:0;
  height: 0.001em;
  border: 0.001em solid var(--muted-text-color);
}

button{
  cursor: pointer;
}

/* ---------------------------------*/
/* ------------- ERROR -------------*/
/* ---------------------------------*/

.error{
  padding-top:0px;
  color:red;
  font-size:1rem;
  word-break: break-word;
  text-align:left;
  padding-bottom:8px;
  font-weight:500;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.good-error{
  padding-top:0px;
  color:rgb(0, 170, 0);
  font-size:1rem;
  word-break: break-word;
  text-align:left;
  padding-bottom:8px;
  font-weight:500;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}



/* --------------------------------------*/
/* ------------- TABLE DATA -------------*/
/* --------------------------------------*/
.file-dashboard-header{
  max-width: 1200px;
  width:100%;
  justify-self: center;
  padding:8px;
  display:flex;
  justify-content: space-between;
  align-items: center;
  gap:16px;
  box-sizing: border-box;
  background-color: var(--muted);
}



.file-dashboard-header-left p{
  width: 100%;
}

.file-dashboard-header-right{
  display:flex;
  gap:16px;
}

@media (max-width: 675px){
  .file-dashboard-header {
    flex-direction: column;
  }
  .file-dashboard-header-right, .file-dashboard-header-right form{
    display: flex;
    flex-direction:column;
    gap: 1rem;
    justify-content: center;
    width:100%;
  }
}

@media (max-width: 800px){
  .column-4{
    display:none;
  }
}

@media (max-width: 650px){
  .column-3{
    display:none;
  }
}

@media (max-width: 500px){
  .column-2{
    display:none;
  }
}

.folder-view-header{
  max-width: 1200px;
  width:100%;
  justify-self: center;
  display:flex;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  padding:8px;

}

.folder-view-header a{
  display:flex;
  align-items: center;
  color:rgb(0, 0, 0);
  background-color: var(--orange);
  border-radius:8px;
  padding:8px 24px;
}
.folder-view-header svg{
  height:16px;
  width:16px;
}

.file-dashboard-header-buttons{
  display:flex;
  gap:16px;
}

#realFileInput{
  display:none;
}

.file-dashboard-header button, .folder-view-header button:not(.gray-button2){
  border:none;
  cursor: pointer;
  background-color:var(--blue);
  color:#F9FaF8;
  border-radius: 8px;
  padding:8px 24px;
}


.file-dashboard-header button, .folder-view-header button:hover:not(.gray-button2){
  background-color: var(--blue-hover);
}

.gray-button2{
  border:none;
  cursor: pointer;
  background-color: rgb(151, 151, 151);
  color:#F9FaF8;
  border-radius: 8px;
  padding:8px 24px;
}

.gray-button2:hover{
  background-color: rgb(122, 122, 122);
}



.table-row-name{
  display:flex;
  gap: 4px;
  align-items: center;
}

.table-row-name svg{
  width:25px;
  height:25px;
}

table {
  border-collapse: collapse;
 /*border: 2px solid rgb(140 140 140);*/
  border: 2px solid var(--border);
  font-family: sans-serif;
  font-size: 0.8rem;
  letter-spacing: 1px;
  max-width:1200px;
  width:100%;
  justify-self: center;
  background-color: var(--background);
}

th, td {
  padding: 8px 10px;
  white-space: nowrap;
}

.truncate-text{
  max-width: 275px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

tr{
  /*border: 1px solid rgb(160 160 160);*/
  border: 1px solid var(--border);
}

tbody tr:hover{
  background-color: rgb(233, 233, 233);
  cursor:pointer;
}

tbody th{
  font-weight:normal;
}

tbody td{
  color: var(--muted-text-color)
}

thead{
  text-align:left;
}

/* ---------------------------------------*/
/* -------------- FILE INFO --------------*/
/* ---------------------------------------*/

.file-view-header{
  max-width: 1200px;
  width:100%;
  justify-self: center;
  display:flex;;
  align-items: center;
  box-sizing: border-box;
  padding:8px;
  justify-content: space-between;
}

.file-view-header a{
  display:flex;
  justify-self: left;
  align-items: center;
  color:rgb(0, 0, 0);
  background-color: var(--orange);
  border-radius:8px;
  padding:8px 24px;
}
.file-view-header svg{
  height:16px;
  width:16px;
}

.file-info-card{
  justify-self: center;
  max-width:600px;
  width:100%;
  border:1px solid var(--border);
  border-radius:8px;
  /*box-shadow: 5px 5px 10px rgb(197, 197, 197);*/
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
  padding:32px;
  box-sizing: border-box;
  display:flex;
  flex-direction: column;
  align-items:center;
  background-color: var(--background);
  
}

.copy-status{
  margin-top:8px;
  text-align:center;
  font-weight:500;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color:green;
}

.copy-container-top input{
  border: 1px solid var(--border);
  border-radius:8px;
  padding: 8px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

.file-info-card:not(.file-info-card-buttons){
  font-family: sans-serif;
  font-size: 0.8rem;
  letter-spacing: 1px;
}

.file-info-card-buttons-bottom form{
  display:flex;
  flex-direction:column;
  gap:16px;
}

.file-info-card-buttons-bottom .expiration{
  display:flex;
  gap:16px;
  align-items:center;
  justify-content: center;
}

.file-info-card-title{
  font-weight:bold;
}

.file-info-card-body{
  display:grid;
  grid-template-columns: auto 1fr;
  gap: 8px 16px;
  padding:32px;
  
}

.file-info-card-body p{
  word-wrap: break-word;
  max-width:350px;
}
/* ... */

